Add Tweet Upload Intent Service
Change-Id: Ieef125006035757244de2b9c5583fe1573355cfc

--- a/tweet-composer/src/main/AndroidManifest.xml
+++ b/tweet-composer/src/main/AndroidManifest.xml
@@ -26,5 +26,9 @@
             android:name=".ComposerActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize|stateVisible"/>
+        <service
+            android:name=".TweetUploadService"
+            android:enabled="true"
+            android:exported="false"/>
     </application>
 </manifest>
