Add task to create Unity packages
Change-Id: I95e163ea77aead37725c5e470a14a6e0639e65ec

--- a/twitter-unity/build.gradle
+++ b/twitter-unity/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.library'
 
 apply from: rootProject.commonPlugins
+apply plugin: 'io.fabric.gradle.unity'
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
