--- a/twitter-unity/internal-build.gradle
+++ b/twitter-unity/internal-build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.library'
 apply from: rootProject.qualityScript
 apply from: rootProject.deployScript
+apply plugin: 'io.fabric.gradle.unity'
 apply plugin: io.fabric.gradle.weaving.ArtifactSizePlugin
 apply plugin: io.fabric.gradle.weaving.FabricPropertiesPlugin
 apply plugin: io.fabric.gradle.weaving.DexMethodCountPlugin
