--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'io.fabric.gradle.unity:unity:0.0.1'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
         classpath 'io.fabric.gradle.weaving:projectOrBinary:0.0.1'
         classpath 'io.fabric.gradle.release:kit-release:0.0.4'
