--- a/tweet-composer/internal-build.gradle
+++ b/tweet-composer/internal-build.gradle
@@ -88,6 +88,7 @@ dependencies {
         releaseCompile projectOrBinary(path: path, configuration: 'release', binary: binary)
     }
     compile rootProject.picasso
+    compile rootProject.tweetText
 
     testCompile rootProject.fabricTest
     testCompile rootProject.mockito
