Update TwitterKit class to match C# API
Change-Id: I18bafbb76cfa2ec50be18430afbfc8e5d60d128e

--- a/twitter-unity/build.gradle
+++ b/twitter-unity/build.gradle
@@ -76,7 +76,8 @@ internal {
 }
 
 ext.projectDependencies = [
-        ':twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar'
+        ':twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar',
+        ':tweet-composer' : 'com.twitter.sdk.android:tweet-composer:+@aar'
 ]
 
 dependencies {
