--- a/twitter-unity/internal-build.gradle
+++ b/twitter-unity/internal-build.gradle
@@ -88,7 +88,8 @@ android {
 
 ext.projectDependencies = [
         ':sdk:fabric:fabric' : 'io.fabric.sdk.android:fabric:+@aar',
-        ':sdk:twitter:twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar'
+        ':sdk:twitter:twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar',
+        ':sdk:twitter:tweet-composer' : 'com.twitter.sdk.android:tweet-composer:+@aar'
 ]
 
 dependencies {
