Add Tweet Id to Tweet composer success broadcast
* Expose composer broadcast intent extras
* Add example broadcast receivers to sample app

Change-Id: I53205131fc2ba4db744be4e0bf323e868226b849

--- a/samples/app/src/main/AndroidManifest.xml
+++ b/samples/app/src/main/AndroidManifest.xml
@@ -78,5 +78,21 @@
             android:name=".tweetui.TweetPreviewActivity"
             android:label="@string/kit_tweetui"/>
 
+        <receiver
+            android:name=".tweetcomposer.TweetSuccessReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.twitter.sdk.android.tweetcomposer.UPLOAD_SUCCESS"/>
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".tweetcomposer.TweetFailureReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.twitter.sdk.android.tweetcomposer.UPLOAD_FAILURE"/>
+            </intent-filter>
+        </receiver>
+
     </application>
 </manifest>
