Add basic photo viewer
* Supports pinch zoom, drag, and double tap.

Change-Id: I0e77b76ce65f59f973e4ba8afbd2acfa7c315825

--- a/tweet-ui/src/main/AndroidManifest.xml
+++ b/tweet-ui/src/main/AndroidManifest.xml
@@ -25,7 +25,10 @@
         <activity
             android:name=".PlayerActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/PlayerTheme"/>
+            android:theme="@style/MediaTheme"/>
+        <activity
+            android:name=".GalleryActivity"
+            android:theme="@style/MediaTheme"/>
     </application>
 
 </manifest>
