Add JVM tests for TwitterStaticNativeAdRenderer
Change-Id: I04530eef61b30f31f092d2aa0f262e75e01abf29

--- a/twitter-mopub/build.gradle
+++ b/twitter-mopub/build.gradle
@@ -84,4 +84,14 @@ dependencies {
     compile (rootProject.mopub) {
         transitive = true;
     }
+
+    testCompile rootProject.mockito
+    testCompile rootProject.junit
+    testCompile(rootProject.robolectric) {
+        exclude group: 'commons-logging', module: 'commons-logging'
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    }
+    testCompile (rootProject.junitAddons) {
+        transitive = false
+    }
 }
