--- a/twitter/build.gradle
+++ b/twitter/build.gradle
@@ -92,7 +92,11 @@ internal {
         name = "${project.pom_group_id}.${project.pom_artifact_id}"
         description = "Integrate Log in with Twitter, embed Tweets, and leverage the Twitter API."
         version = project.version
-        artifactUrl = "https://maven.fabric.io/repo/com/twitter/sdk/android/twitter/${project.version}/twitter-${project.version}.pom"
+        artifactUrl {
+            repository = "https://maven.fabric.io/public"
+            groupId = project.pom_group_id
+            artifactId = project.pom_artifact_id
+        }
         releaseNotesUrl = "https://s3.amazonaws.com/kits-crashlytics-com/android/com/twitter/sdk/android/twitter/${project.version}/twitter-${project.version}-release-notes.html"
         learnMoreUrl = "http://docs.fabric.io/android/twitter/index.html"
         price {
