--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,13 @@ buildscript {
     repositories {
         mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
+        // TODO: Remove once sdk-manager-plugin updated in maven or sdk-manager-plugin is replaced.
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.0.0'
         classpath 'io.fabric.gradle.unity:unity:0.0.1'
-        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
+        classpath 'com.github.JakeWharton:sdk-manager-plugin:220bf7a88a7072df3ed16dc8466fb144f2817070'
         classpath 'io.fabric.gradle.weaving:projectOrBinary:0.0.1'
         classpath 'io.fabric.gradle.release:kit-release:0.0.4'
     }
