--- a/samples/app/src/main/AndroidManifest.xml
+++ b/samples/app/src/main/AndroidManifest.xml
@@ -77,6 +77,9 @@
         <activity
             android:name=".tweetui.TweetPreviewActivity"
             android:label="@string/kit_tweetui"/>
+        <activity
+            android:name=".tweetui.TweetPojoActivity"
+            android:label="@string/kit_tweetui"/>
 
         <receiver
             android:name=".tweetcomposer.TweetSuccessReceiver"
