--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: android
 jdk: oraclejdk7
 android:
   components:
+    # Workaround to get build tools 23.0.3
+    # https://github.com/travis-ci/travis-ci/issues/5036
+    - tools
+    - platform-tools
     - build-tools-23.0.3
-    - android-22
+    - android-23
     - extra-android-m2repository
 
 script:
