Replacing reflection with the answers shim
Change-Id: Ibdf4211c7c099644edd8e62f31212d11e396e496

--- a/twitter/build.gradle
+++ b/twitter/build.gradle
@@ -24,6 +24,10 @@ applyInternal from: rootProject.deployScript
 applyInternal plugin: 'io.fabric.gradle.weaving.ArtifactSizePlugin'
 applyInternal plugin: 'io.fabric.gradle.weaving.FabricPropertiesPlugin'
 
+repositories {
+    jcenter()
+}
+
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
