--- a/build.gradle
+++ b/build.gradle
@@ -17,15 +17,12 @@
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
-        // TODO: Remove once sdk-manager-plugin updated in maven or sdk-manager-plugin is replaced.
-        maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.1.3'
         classpath 'io.fabric.gradle.unity:unity:0.0.1'
-        classpath 'com.github.JakeWharton:sdk-manager-plugin:220bf7a88a7072df3ed16dc8466fb144f2817070'
         classpath 'io.fabric.gradle.weaving:projectOrBinary:0.0.1'
         classpath 'io.fabric.gradle.release:kit-release:0.0.4'
     }
@@ -54,9 +51,7 @@ subprojects { Project subproject ->
 
     repositories {
         jcenter()
-        mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
-        mavenLocal()
     }
 
     // We need to do this so that by the time any project registers a dependency, that project
@@ -68,7 +63,7 @@ subprojects { Project subproject ->
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.10'
+    gradleVersion = '2.14.1'
 }
 
 ext {
