--- a/samples/app/internal-build.gradle
+++ b/samples/app/internal-build.gradle
@@ -1,12 +1,12 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.0.4'
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.1.3'
         classpath 'io.fabric.tools:gradle:1.21.6'
     }
 }
@@ -28,7 +28,6 @@ apply plugin: 'io.fabric'
 apply plugin: 'spoon'
 
 repositories {
-    mavenCentral()
     jcenter()
     maven { url 'https://maven.fabric.io/public' }
 }
