Update proguard for Okhttp3 and Retrofit2
Change-Id: I2fbd0714367a30dad499bbf1fffc4304751e6737

--- a/samples/app/internal-build.gradle
+++ b/samples/app/internal-build.gradle
@@ -55,7 +55,7 @@ android {
             buildConfigField "String", "CONSUMER_KEY", "\"${props.getProperty("twitterConsumerKey")}\""
             buildConfigField "String", "CONSUMER_SECRET", "\"${props.getProperty("twitterConsumerSecret")}\""
             buildConfigField "String", "MOPUB_AD_UNIT_ID", "\"${props.getProperty("mopubAdUnitId")}\""
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt')
         }
     }
