--- a/samples/app/internal-build.gradle
+++ b/samples/app/internal-build.gradle
@@ -5,9 +5,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.0.4'
-        classpath 'com.android.tools.build:gradle:2.1.2'
-        classpath 'io.fabric.tools:gradle:1.22.0'
+        classpath dependency.spoonGradlePlugin
+        classpath dependency.androidGradlePlugin
+        classpath dependency.fabricGradlePlugin
     }
 }
 
@@ -27,11 +27,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'spoon'
 
-repositories {
-    jcenter()
-    maven { url 'https://maven.fabric.io/public' }
-}
-
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
@@ -40,7 +35,7 @@ android {
         applicationId "com.example.app.twitter"
         versionCode 1
         versionName "1.0"
-        minSdkVersion 14
+        minSdkVersion rootProject.minSdkVersion.twitter
         targetSdkVersion rootProject.targetSdkVersion
         testInstrumentationRunner "com.example.app.SpoonInstrumentationTestRunner"
     }
@@ -75,8 +70,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility rootProject.sourceCompatibilityVersion
+        targetCompatibility rootProject.targetCompatibilityVersion
     }
 }
 
@@ -86,14 +81,14 @@ dependencies {
     releaseCompile project(path: ':sdk:twitter:twitter', configuration: 'release')
     releaseCompile project(path: ':sdk:twitter:twitter-mopub', configuration: 'release')
 
-    compile rootProject.appCompat
-    compile rootProject.design
-    debugCompile rootProject.leakCanary
-    releaseCompile rootProject.leakCanaryNoOp
+    compile dependency.appCompat
+    compile dependency.design
+    debugCompile dependency.leakCanary
+    releaseCompile dependency.leakCanaryNoOp
 
-    androidTestCompile rootProject.spoon
-    androidTestCompile rootProject.espresso
-    androidTestCompile rootProject.androidTestingSupport
+    androidTestCompile dependency.spoon
+    androidTestCompile dependency.espresso
+    androidTestCompile dependency.androidTestingSupport
 }
 
 task setupCi << {
