--- a/twitter-core/build.gradle
+++ b/twitter-core/build.gradle
@@ -17,8 +17,6 @@
 
 apply plugin: 'com.android.library'
 
-apply from: rootProject.commonPlugins
-
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
@@ -26,7 +24,7 @@ android {
     defaultConfig {
         versionCode 1
         versionName version
-        minSdkVersion 14
+        minSdkVersion rootProject.minSdkVersion.twitter
         consumerProguardFiles 'proguard.txt'
     }
 
@@ -70,40 +68,34 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
-}
-
-internal {
-    dexMethodCount {
-        packageFilter = "com.twitter.sdk.android.core"
+        sourceCompatibility rootProject.sourceCompatibilityVersion
+        targetCompatibility rootProject.targetCompatibilityVersion
     }
 }
 
 dependencies {
-    compile rootProject.fabric
-    compile rootProject.retrofit
-    compile rootProject.retrofitGsonConverter
-    compile rootProject.gson
-    compile rootProject.okHttp
+    compile dependency.fabric
+    compile dependency.retrofit
+    compile dependency.retrofitGsonConverter
+    compile dependency.gson
+    compile dependency.okHttp
 
-    androidTestCompile rootProject.mockito
-    androidTestCompile rootProject.dexmakerMockito
-    androidTestCompile rootProject.fabricTest
-    androidTestCompile (rootProject.junitAddons) {
+    androidTestCompile dependency.mockito
+    androidTestCompile dependency.dexmakerMockito
+    androidTestCompile dependency.fabricTest
+    androidTestCompile (dependency.junitAddons) {
         transitive = false
     }
 
-    testCompile rootProject.fabricTest
-    testCompile rootProject.mockito
-    testCompile rootProject.junit
-    testCompile rootProject.retrofitMock
-    testCompile(rootProject.robolectric) {
+    testCompile dependency.fabricTest
+    testCompile dependency.mockito
+    testCompile dependency.junit
+    testCompile dependency.retrofitMock
+    testCompile(dependency.robolectric) {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
-    testCompile (rootProject.junitAddons) {
+    testCompile (dependency.junitAddons) {
         transitive = false
     }
 }
