--- a/samples/app/build.gradle
+++ b/samples/app/build.gradle
@@ -1,13 +1,7 @@
 buildscript {
-    repositories {
-        jcenter()
-        maven { url 'https://maven.fabric.io/public' }
-    }
-
     dependencies {
-        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.0.4'
-        classpath 'com.android.tools.build:gradle:2.1.2'
-        classpath 'io.fabric.tools:gradle:1.22.0'
+        classpath dependency.spoonGradlePlugin
+        classpath dependency.fabricGradlePlugin
     }
 }
 
@@ -23,11 +17,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'spoon'
 
-repositories {
-    jcenter()
-    maven { url 'https://maven.fabric.io/public' }
-}
-
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
@@ -36,7 +25,7 @@ android {
         applicationId "com.example.app.twitter"
         versionCode 1
         versionName "1.0"
-        minSdkVersion 14
+        minSdkVersion rootProject.minSdkVersion.twitter
         targetSdkVersion rootProject.targetSdkVersion
         testInstrumentationRunner "com.example.app.SpoonInstrumentationTestRunner"
     }
@@ -71,21 +60,21 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility rootProject.sourceCompatibilityVersion
+        targetCompatibility rootProject.targetCompatibilityVersion
     }
 }
 
 dependencies {
     compile project(':twitter')
     compile project(':twitter-mopub')
-    compile rootProject.appCompat
-    compile rootProject.design
+    compile dependency.appCompat
+    compile dependency.design
 
-    debugCompile rootProject.leakCanary
-    releaseCompile rootProject.leakCanaryNoOp
+    debugCompile dependency.leakCanary
+    releaseCompile dependency.leakCanaryNoOp
 
-    androidTestCompile rootProject.spoon
-    androidTestCompile rootProject.espresso
-    androidTestCompile rootProject.androidTestingSupport
+    androidTestCompile dependency.spoon
+    androidTestCompile dependency.espresso
+    androidTestCompile dependency.androidTestingSupport
 }
