--- a/tweet-ui/build.gradle
+++ b/tweet-ui/build.gradle
@@ -17,8 +17,6 @@
 
 apply plugin: 'com.android.library'
 
-apply from: rootProject.commonPlugins
-
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
@@ -26,7 +24,7 @@ android {
     defaultConfig {
         versionCode 1
         versionName version
-        minSdkVersion 14
+        minSdkVersion rootProject.minSdkVersion.twitter
         consumerProguardFiles 'proguard.txt'
     }
 
@@ -52,8 +50,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility rootProject.sourceCompatibilityVersion
+        targetCompatibility rootProject.targetCompatibilityVersion
     }
 
     // Forcibly add debug and the generated "R" files onto the test classpath
@@ -67,40 +65,26 @@ android {
     }
 }
 
-internal {
-    dexMethodCount {
-        packageFilter = "com.twitter.sdk.android.tweetui"
-    }
-}
-
-ext.projectDependencies = [
-        ':twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar'
-]
-
 dependencies {
-    projectDependencies.each { path, binary ->
-        compile projectOrBinary(path: path, binary: binary)
-    }
+    compile project(':twitter-core')
 
-    compile rootProject.fabric
-    compile rootProject.picasso
-    compile rootProject.supportV4
+    compile dependency.fabric
+    compile dependency.picasso
+    compile dependency.supportV4
 
-    debugCompile rootProject.mockito
+    androidTestCompile dependency.retrofitMock
+    androidTestCompile dependency.mockito
+    androidTestCompile dependency.dexmakerMockito
+    androidTestCompile dependency.fabricTest
 
-    androidTestCompile rootProject.retrofitMock
-    androidTestCompile rootProject.mockito
-    androidTestCompile rootProject.dexmakerMockito
-    androidTestCompile rootProject.fabricTest
-
-    testCompile rootProject.fabricTest
-    testCompile rootProject.mockito
-    testCompile rootProject.junit
-    testCompile(rootProject.robolectric) {
+    testCompile dependency.fabricTest
+    testCompile dependency.mockito
+    testCompile dependency.junit
+    testCompile(dependency.robolectric) {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
-    testCompile (rootProject.junitAddons) {
+    testCompile (dependency.junitAddons) {
         transitive = false
     }
 }
