--- a/twitter-unity/build.gradle
+++ b/twitter-unity/build.gradle
@@ -16,8 +16,6 @@
  */
 
 apply plugin: 'com.android.library'
-
-apply from: rootProject.commonPlugins
 apply plugin: 'io.fabric.gradle.unity'
 
 android {
@@ -27,7 +25,7 @@ android {
     defaultConfig {
         versionCode 1
         versionName version
-        minSdkVersion 14
+        minSdkVersion rootProject.minSdkVersion.twitter
         consumerProguardFiles 'proguard.txt'
     }
 
@@ -53,8 +51,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility rootProject.sourceCompatibilityVersion
+        targetCompatibility rootProject.targetCompatibilityVersion
     }
 
     // Forcibly add debug and the generated "R" files onto the test classpath
@@ -68,22 +66,10 @@ android {
     }
 }
 
-internal {
-    dexMethodCount {
-        packageFilter = "com.twitter.sdk.android.unity"
-    }
-}
-
-ext.projectDependencies = [
-        ':twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar',
-        ':tweet-composer' : 'com.twitter.sdk.android:tweet-composer:+@aar'
-]
-
 dependencies {
     provided fileTree(dir: 'libs', include: ['unity.jar'])
-    projectDependencies.each { path, binary ->
-        compile projectOrBinary(path: path, binary: binary)
-    }
+    compile project(':twitter-core')
+    compile project(':tweet-composer')
 
-    compile rootProject.fabric
+    compile dependency.fabric
 }
