--- a/twitter/build.gradle
+++ b/twitter/build.gradle
@@ -17,12 +17,6 @@
 
 apply plugin: 'com.android.library'
 
-apply plugin: 'io.fabric.gradle.release.kit-release'
-applyInternal from: rootProject.qualityScript
-applyInternal from: rootProject.deployScript
-applyInternal plugin: 'io.fabric.gradle.weaving.ArtifactSizePlugin'
-applyInternal plugin: 'io.fabric.gradle.weaving.FabricPropertiesPlugin'
-
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
@@ -30,7 +24,7 @@ android {
     defaultConfig {
         versionCode 1
         versionName version
-        minSdkVersion 14
+        minSdkVersion rootProject.minSdkVersion.twitter
     }
 
     lintOptions {
@@ -52,8 +46,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility rootProject.sourceCompatibilityVersion
+        targetCompatibility rootProject.targetCompatibilityVersion
     }
 
     testOptions {
@@ -68,64 +62,16 @@ ext.projectDependencies = [
 ]
 
 dependencies {
-    projectDependencies.each { path, binary ->
-        compile projectOrBinary(path: path, binary: binary)
-    }
+    compile project(':twitter-core')
+    compile project(':tweet-composer')
+    compile project(':tweet-ui')
 
-    compile rootProject.fabric
+    compile dependency.fabric
 
-    testCompile rootProject.mockito
-    testCompile rootProject.junit
-    testCompile rootProject.mavenAntTasks
-    testCompile(rootProject.robolectric) {
+    testCompile dependency.mockito
+    testCompile dependency.junit
+    testCompile(dependency.robolectric) {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
 }
-
-internal {
-    fabricKitRelease {
-        apiKey = project.hasProperty('TWITTER_KIT_API_KEY') ? Project.TWITTER_KIT_API_KEY : ""
-        friendlyName = "Twitter"
-        name = "${project.pom_group_id}.${project.pom_artifact_id}"
-        description = "Integrate Log in with Twitter, embed Tweets, and leverage the Twitter API."
-        version = project.version
-        artifactUrl {
-            repository = "https://maven.fabric.io/public"
-            groupId = project.pom_group_id
-            artifactId = project.pom_artifact_id
-        }
-        releaseNotesUrl = "https://s3.amazonaws.com/kits-crashlytics-com/android/com/twitter/sdk/android/twitter/${project.version}/twitter-${project.version}-release-notes.html"
-        learnMoreUrl = "http://docs.fabric.io/android/twitter/index.html"
-        price {
-            plan = "free"
-        }
-        license {
-            name = "Twitter"
-            url = "https://twitter.com/tos"
-        }
-        releaseChannel = "public"
-        minBuild = 0
-        maxBuild = Integer.MAX_VALUE
-        minPlatformVersion {
-            apiVersion "14"
-        }
-        docsUrl = "https://docs.fabric.io/javadocs/twitter-core/${project.version}/index.html"
-        twitterHandle = "@twitterdev"
-        websiteUrl = "https://docs.fabric.io/android/twitter/index.html"
-    }
-
-    task uploadFabricReleaseNotes(group: 'Release',
-            description: 'Upload Release Notes to S3 bucket kits-crashlytics-com',
-            type: io.fabric.gradle.release.FileUploadS3Task) {
-        enabled = rootProject.ext.kitsForRelease.get(project.path)
-        accessKey = System.properties['AWS_ACCESS_KEY_ID']
-        secretKey = System.properties['AWS_SECRET_ACCESS_KEY']
-        bucketName = System.properties['AWS_BUCKET']
-        destination = "android/com/twitter/sdk/android/twitter/${project.version}/twitter-${project.version}-release-notes.html"
-        srcFile = new File("${project.projectDir}/release-notes.html")
-    }
-}
-
-project.tasks.getByName('fabricKitRelease').enabled = rootProject.ext.kitsForRelease.get(project.path)
-
