--- a/samples/app/internal-build.gradle
+++ b/samples/app/internal-build.gradle
@@ -83,6 +83,7 @@ dependencies {
 
     compile dependency.appCompat
     compile dependency.design
+    compile dependency.okHttpInterceptor
     debugCompile dependency.leakCanary
     releaseCompile dependency.leakCanaryNoOp
 
