Add OkHttpInterceptor dependency to twitter sdk's build
Change-Id: Ic64e881d24eece44ffa9d85227f8e11d3805e50d

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -47,6 +47,7 @@ ext {
             retrofitGsonConverter      : 'com.squareup.retrofit2:converter-gson:2.0.2',
             gson                       : 'com.google.code.gson:gson:2.6.1',
             okHttp                     : 'com.squareup.okhttp3:okhttp:3.2.0',
+            okHttpInterceptor          : 'com.squareup.okhttp3:logging-interceptor:3.2.0',
             design                     : 'com.android.support:design:23.1.1',
             tweetText                  : 'com.twitter:twitter-text:1.13.0'
     ]
