Remove Crashlytics and Digits from build
Change-Id: I0af665ed067c917c8cad769023f06212eb23815e

--- a/tweet-ui/internal-build.gradle
+++ b/tweet-ui/internal-build.gradle
@@ -80,7 +80,6 @@ android {
 }
 
 ext.projectDependencies = [
-        ':sdk:fabric:fabric' : 'io.fabric.sdk.android:fabric:+@aar',
         ':sdk:twitter:twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar'
 ]
 
@@ -96,6 +95,7 @@ dependencies {
     androidTestCompile dependency.retrofitMock
     androidTestCompile dependency.mockito
     androidTestCompile dependency.dexmakerMockito
+    androidTestCompile dependency.fabricTest
 
     testCompile dependency.fabricTest
     testCompile dependency.mockito
