--- a/twitter/internal-build.gradle
+++ b/twitter/internal-build.gradle
@@ -70,8 +70,7 @@ android {
 ext.projectDependencies = [
         ':sdk:twitter:twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar',
         ':sdk:twitter:tweet-ui' : 'com.twitter.sdk.android:tweet-ui:+@aar',
-        ':sdk:twitter:tweet-composer' : 'com.twitter.sdk.android:tweet-composer:+@aar',
-        ':sdk:fabric:fabric' : 'io.fabric.sdk.android:fabric:+@aar'
+        ':sdk:twitter:tweet-composer' : 'com.twitter.sdk.android:tweet-composer:+@aar'
 ]
 
 dependencies {
