Fix issue causing projectOrBinary resolution to fail
Change-Id: Id1ae23d6c2941be1b041c1b4220490fb2effa7b2

--- a/tweet-composer/internal-build.gradle
+++ b/tweet-composer/internal-build.gradle
@@ -73,7 +73,7 @@ android {
 }
 
 ext.projectDependencies = [
-        ':sdk:twitter:twitter-core' : 'com.twitter.sdk.android:twitter-core:+aar'
+        ':sdk:twitter:twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar'
 ]
 
 dependencies {
