--- a/tweet-composer/build.gradle
+++ b/tweet-composer/build.gradle
@@ -62,11 +62,12 @@ android {
 dependencies {
     compile project(':twitter-core')
 
-    compile dependency.fabric
     compile dependency.picasso
     compile dependency.tweetText
 
-    testCompile dependency.fabricTest
+    androidTestCompile dependency.mockito
+    androidTestCompile dependency.dexmakerMockito
+
     testCompile dependency.mockito
     testCompile dependency.junit
     testCompile dependency.retrofitMock
